--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
                         <div class="icon-lg">📦</div>
                         <h5 class="card-title fw-bold">商品管理</h5>
                         <p class="card-text text-muted small">商品資料維護<br>庫存設定</p>
-                        <a href="/products" class="btn btn-sm btn-outline-secondary rounded-pill w-100 mt-2">進入模組</a>
+                        <a href="/products" class="btn btn-sm btn-outline-secondary rounded-pill w-100 mt-2">進入管理</a>
                     </div>
                 </div>
             </div>
