跟改演算法，和商品編輯欄位名稱

--- a/frontend/products.html
+++ b/frontend/products.html
@@ -76,7 +76,7 @@
                                     class="form-control"></div>
                         </div>
                         <div class="row mb-2">
-                            <div class="col"><label>基本保底庫存</label><input v-model.number="temp.safe_stock" type="number"
+                            <div class="col"><label>安全庫存</label><input v-model.number="temp.safe_stock" type="number"
                                     class="form-control"></div>
                             <div class="col"><label>補貨天數</label><input v-model.number="temp.lead_time" type="number"
                                     class="form-control"></div>
